# modeldy

./: .gitignore  CMakeLists.txt  Makefile  build_cuda.bat  test_mse.cpp
docs/: README.md  TRAINING_AND_OPTIMIZER_GUIDE.md
examples/: cuda_cpu_comparison_test.cpp  gemm_example.cpp  loss_example.cpp  loss_gradient_test.cpp  operator_registry_example.cpp  simple_cuda_test.cpp  training_example.cpp
include/: memory_pool.h  model.h  node.h  operator_registry.h  optimizer.h
include/cpu/: cpu_math.h  node_cpu.h  operator.h
include/cpu/operator/: activation_op.h  basic_op.h  gemm_op.h  loss_op.h
include/cuda/: cuda_check.h  cuda_math.h  data_transfer_node.h  node_cuda.h  optimizer_kernels.h
include/cuda/operator/: activation_op.h  basic_op.h  loss_op.h
src/: memory_pool.cpp  model.cpp  optimizer.cpp
src/cpu/: node_cpu.cpp
src/cpu/operator/: activation_op.cpp  basic_op.cpp  gemm_op.cpp  loss_op.cpp
src/cuda/: data_transfer_node.cu  node_cuda.cu  optimizer_kernels.cu
src/cuda/operator/double/: activation_op.cu
src/cuda/operator/float/: activation_op.cu  basic_op.cu  loss_op.cu
